--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <img src="/img/logo.svg" alt="logo SpaceX" class="logo">
+        <img src="img/logo.svg" alt="logo SpaceX" class="logo">
         <nav class="main-nav">
             <ul class="list">
                 <li class="item">
